feat: add start UI button

--- a/gui/src/app/othello-board/othello-board.component.html
+++ b/gui/src/app/othello-board/othello-board.component.html
@@ -1,9 +1,12 @@
 <div class="board">
+ 
     <div *ngFor="let row of rows" class="row">
       <div *ngFor="let col of cols" class="square"
            [class.piece-black]="getPiece(row, col) === 'B'"
            [class.piece-white]="getPiece(row, col) === 'W'"
-           (click)="placePiece(row, col)">
+           (click)="placePiece(row, col)" >
       </div>
     </div>
-  </div>
+     
+  <button [ngStyle]="myStyle" [class] = "button" [disabled]="disabled"   (click)="onStart()" > Start </button>  
+</div>
