--- a/gui/src/app/othello-board/othello-board.component.css
+++ b/gui/src/app/othello-board/othello-board.component.css
@@ -23,3 +23,18 @@
   .square.piece-white {
     background-color: white;
   }
+
+
+  .button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    background-color: #b64cba;
+  }
