feat: clour change control from backend

--- a/gui/src/app/othello-board/othello-board.component.css
+++ b/gui/src/app/othello-board/othello-board.component.css
@@ -24,6 +24,9 @@
     background-color: white;
   }
 
+  .square.piece-pink {
+    background-color: pink;
+  }
 
   .button {
     background-color: #4CAF50; /* Green */
