--- a/gui/src/app/app.component.html
+++ b/gui/src/app/app.component.html
@@ -1,5 +1,13 @@
-<nav>
-  <a routerLink="/"></a>
- 
-</nav>
+
+
+<p>
+  <mat-toolbar color="primary">
+    <button mat-icon-button class="example-icon">
+      <a routerLink="/bug-report" routerLinkActive="active" ariaCurrentWhenActive="page"><div class = "text-color"> Bug Report </div></a>
+    </button>
+
+
+
+  </mat-toolbar>
+</p>
 <router-outlet></router-outlet>
