--- a/gui/src/app/bug-report/bug-report.component.html
+++ b/gui/src/app/bug-report/bug-report.component.html
@@ -1,6 +1,13 @@
 <div class="background">
-    <div class= "font-size">Contact me by:</div>
-    <a class = "align"href="https://web.wechat.com/"><div class= "font-size">Wechat ID: Frank__6868 </div></a>
-    <a class = "align2"href="https://accounts.google.com/v3/signin/identifier?dsh=S-1308524640%3A1678728358485145&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AWnogHdGQoPKvWZNGFN-D2c1zEtGB6KLTYNN2CL52cJt3st-gPuvwCx1tiZWsnCjPJg3000qc5Y-ug&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin"><div class= "font-size">Email: Frank627916868@gmail.com </div></a>
-    <a class = "align3"href="https://www.linkedin.com/in/frank-gyq/"><div class= "font-size">LinkedIn: Click Here </div></a>
+    <div class="font-size">Contact me by:</div>
+    <a class="align" href="https://web.wechat.com/">
+        <div class="font-size">Wechat ID: Frank__6868 </div>
+    </a>
+    <a class="align2"
+        href="https://accounts.google.com/v3/signin/identifier?dsh=S-1308524640%3A1678728358485145&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AWnogHdGQoPKvWZNGFN-D2c1zEtGB6KLTYNN2CL52cJt3st-gPuvwCx1tiZWsnCjPJg3000qc5Y-ug&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin">
+        <div class="font-size">Email: Frank627916868@gmail.com </div>
+    </a>
+    <a class="align3" href="https://www.linkedin.com/in/frank-gyq/">
+        <div class="font-size">LinkedIn: Click Here </div>
+    </a>
 </div>
