--- a/gui/src/app/bug-report/bug-report.component.css
+++ b/gui/src/app/bug-report/bug-report.component.css
@@ -1,6 +1,6 @@
 .background {
 	height: 100vh;
-	width: 100vw;
+	width: auto;
 	background: radial-gradient(at 18% 99%, rgb(223, 229, 113) 0px, transparent 50%) repeat scroll 0% 0%, 
                 radial-gradient(at 97% 8%, rgb(118, 249, 173) 0px, transparent 50%) repeat scroll 0% 0%, 
                 radial-gradient(at 79% 82%, rgb(233, 109, 131) 0px, transparent 50%) repeat scroll 0% 0%,
@@ -9,27 +9,27 @@
                 radial-gradient(at 4% 49%, rgb(203, 88, 218) 0px, transparent 50%) repeat scroll 0% 0%, rgba(0, 0, 0, 0) radial-gradient(at 57% 33%, rgb(218, 83, 228) 0px, #a299ff 50%) repeat scroll 0% 0%;
 }
 
+.font-size {
+    font-size: 2.5vw;
+    text-align:center;
+    color: #d6d1d1;
+    padding: 20px;
+}
 .align {
-    position: absolute;
-    top: 20%;
-    left: 50%;
+    position: relative;
+    top: 30%;
     transform: translate(-50%, -50%);
 }
-.font-size {
-    font-size: 50px;
-    
-    color: #d6d1d1;
-}
 .align2 {
-    position: absolute;
-    top: 30%;
-    left: 50%;
+    position: relative;
+    top: 50%;
+
     transform: translate(-50%, -50%);
 }
 
 .align3 {
-    position: absolute;
-    top: 40%;
-    left: 50%;
+    position: relative;
+    top: 70%;
+
     transform: translate(-50%, -50%);
 }
