--- a/gui/src/app/othello-board/othello-board.component.css
+++ b/gui/src/app/othello-board/othello-board.component.css
@@ -13,7 +13,7 @@
     width: 4.5vh;
     height: 4.5vh;
     background-color: green;
-    border: 1px solid black;
+    border: 1px solid rgb(74, 24, 237);
   }
   
   .square.piece-black {
